# Lighting4

./: .gitmodules  CMakeLists.txt  Lighting4.sln  README.md
Lighting4/: AboveLightBlocker.h  AboveLightSource.cpp  AboveLightSource.h  AboveShadePoint.h  CircleLightSource.cpp  CircleLightSource.h  CircleShadePoint.cpp  CircleShadePoint.h  DirectionalLightSource.h  GaussianBlurrer.h  GaussianKernelData.h  LightBlocker.cpp  LightBlocker.h  LightBlockerContainer.cpp  LightBlockerContainer.h  LightLayer.cpp  LightLayer.h  LightRunnable.cpp  LightRunnable.h  LightSource.cpp  LightSource.h  Lighting4.vcxproj  Lighting4.vcxproj.filters  ShadePoint.cpp  ShadePoint.h  doxy.config  main.dox
Lighting4/html/: AboveLightBlocker_8h_source.html  AboveLightSource_8h_source.html  AboveShadePoint_8h_source.html  CircleLightSource_8h_source.html  CircleShadePoint_8h_source.html  DirectionalLightSource_8h_source.html  GaussianBlurrer_8h_source.html  GaussianKernelData_8h_source.html  LightBlockerContainer_8h_source.html  LightBlocker_8h_source.html  LightLayer_8h_source.html  LightRunnable_8h_source.html  LightSource_8h_source.html  ShadePoint_8h_source.html  annotated.html  classes.html  classlighting_1_1AboveLightBlocker-members.html  classlighting_1_1AboveLightBlocker.html  classlighting_1_1AboveLightSource-members.html  classlighting_1_1AboveLightSource.html  classlighting_1_1AboveLightSource__coll__graph.map  classlighting_1_1AboveLightSource__coll__graph.md5  classlighting_1_1AboveLightSource__inherit__graph.map  classlighting_1_1AboveLightSource__inherit__graph.md5  classlighting_1_1AboveShadePoint-members.html  classlighting_1_1AboveShadePoint.html  classlighting_1_1AboveShadePoint__coll__graph.md5  classlighting_1_1AboveShadePoint__inherit__graph.map  classlighting_1_1AboveShadePoint__inherit__graph.md5  classlighting_1_1CircleLightSource-members.html  classlighting_1_1CircleLightSource.html  classlighting_1_1CircleLightSource__coll__graph.map  classlighting_1_1CircleLightSource__coll__graph.md5  classlighting_1_1CircleLightSource__inherit__graph.map  classlighting_1_1CircleLightSource__inherit__graph.md5  classlighting_1_1CircleShadePoint-members.html  classlighting_1_1CircleShadePoint.html  classlighting_1_1CircleShadePoint__coll__graph.map  classlighting_1_1CircleShadePoint__coll__graph.md5  classlighting_1_1CircleShadePoint__inherit__graph.md5  (+58 more)
Lighting4/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+7 more)
Lighting4/latex/: annotated.tex  classlighting_1_1AboveLightBlocker.tex  classlighting_1_1AboveLightSource.tex  classlighting_1_1AboveLightSource__coll__graph.md5  classlighting_1_1AboveLightSource__inherit__graph.md5  classlighting_1_1AboveShadePoint.tex  classlighting_1_1AboveShadePoint__coll__graph.md5  classlighting_1_1AboveShadePoint__inherit__graph.md5  classlighting_1_1CircleLightSource.tex  classlighting_1_1CircleLightSource__coll__graph.md5  classlighting_1_1CircleLightSource__inherit__graph.md5  classlighting_1_1CircleShadePoint.tex  classlighting_1_1CircleShadePoint__coll__graph.md5  classlighting_1_1CircleShadePoint__inherit__graph.md5  classlighting_1_1DirectionalLightSource.tex  classlighting_1_1DirectionalLightSource__coll__graph.md5  classlighting_1_1DirectionalLightSource__inherit__graph.md5  classlighting_1_1GaussianBlurrer.tex  classlighting_1_1GaussianBlurrer__coll__graph.md5  classlighting_1_1GaussianKernelData.tex  classlighting_1_1LightBlocker.tex  classlighting_1_1LightBlockerContainer.tex  classlighting_1_1LightLayer.tex  classlighting_1_1LightRunnable.tex  classlighting_1_1LightSource.tex  classlighting_1_1LightSource__coll__graph.md5  classlighting_1_1LightSource__inherit__graph.md5  classlighting_1_1ShadePoint.tex  classlighting_1_1ShadePoint__coll__graph.md5  classlighting_1_1ShadePoint__inherit__graph.md5  hierarchy.tex  index.tex  refman.tex
LightingExample/: LightingExample.vcxproj  LightingExample.vcxproj.filters  Source.cpp  TestCore.cpp  TestCore.h
docs/: main.dox
examples/example1/: CMakeLists.txt
examples/example1/example1/: TestCore.h
examples/example1/src/: Source.cpp  TestCore.cpp
src/: AboveLightBlocker.cpp  AboveLightSource.cpp  AboveShadePoint.cpp  CircleLightSource.cpp  DirectionalLightSource.cpp  GaussianBlurrer.cpp  GaussianKernelData.cpp  LightBlocker.cpp  LightBlockerContainer.cpp  LightRunnable.cpp  LightSource.cpp  ShadePoint.cpp
